# HastyRenderer

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_and_run.bat  cmake_build.bat  cmake_build.sh  cmake_vars.bat  cmake_vars.sh  meson.build  meson_build.bat  meson_options.txt  meson_reconfigure.bat  meson_run.bat  meson_vars.bat  reconfigure.bat  renderJob.json  run.py  vars.bat  vcpkg_install_requirements_linux.sh  vcpkg_install_requirements_windows.bat
apps/: Benchmarks.cpp  PathTracingViewer.cpp  PhotonMappingViewer.cpp  Tests.cpp  ViewerUtils.cpp  ViewerUtils.h  VulkanPathTracePrototype.cpp  VulkanPrototype.cpp  VulkanPrototype.h  VulkanRaytracePrototype.cpp
cmake/: AddShishua.cmake  DownloadOpenImageDenoise.cmake
core/include/Hasty/: BRDF.h  Camera.h  Core.h  Image.h  Json.h  LightRayInfo.h  Random.h  Sample.h  Scene.h  SmallVector.h  Texture.h  tinyobj.h
core/src/: Camera.cpp  Environment.cpp  Image.cpp  MIS.cpp  Random.cpp  Scene.cpp  tinyobj.cpp
data/shaders/: compile.bat  laplaceShader.comp
include/Hasty/: BRDF.h  Camera.h  Environment.h  File.h  HashCells.h  Image.h  Json.h  LightRayInfo.h  MIS.h  PathTracing.h  PhotonMapping.h  Random.h  RenderJob.h  Sample.h  Scene.h  SmallVector.h  Texture.h  Timer.h  VMath.h  Vulkan.h
shaders/: compile.bat  rayQuery.comp
src/: BRDF.cpp  Camera.cpp  Image.cpp  Json.cpp  LightRayInfo.cpp  MIS.cpp  PathTracing.cpp  PhotonMapping.cpp  Random.cpp  RenderJob.cpp  Sample.cpp  Scene.cpp  Texture.cpp  VMath.cpp  Vulkan.cpp  tinyobj.cpp
subprojects/: OpenImageDenoise.wrap  embree.wrap  openexr.wrap  robin_hood.wrap  shishua.wrap  tinyobjloader.wrap
subprojects/packagefiles/OpenImageDenoise/: meson.build  readme.txt
subprojects/packagefiles/embree/: meson.build
subprojects/packagefiles/robin_hood/: meson.build
subprojects/packagefiles/shishua/: meson.build
subprojects/packagefiles/tinyobjloader/: meson.build
